Bug 506844.  Remove kids in order, not in reverse order, when clearing textContent and innerHTML.  r=sicking